--- a/public_html/layouts/basic/skins/gray/style.css
+++ b/public_html/layouts/basic/skins/gray/style.css
@@ -5820,4 +5820,5 @@ h6,
 
 .recentComments .addCommentBlock {
   border-radius: 0;
-}/*# sourceMappingURL=style.css.map */
+}
+/*# sourceMappingURL=style.css.map */
