--- a/public_html/layouts/basic/styles/_Style.scss
+++ b/public_html/layouts/basic/styles/_Style.scss
@@ -807,7 +807,7 @@ hr {
 	margin-top: 2px;
 	margin-left: 5px;
 	height: 12px;
-	z-index: 1030;
+	z-index: 1051;
 }
 
 .ui-slider-disabled {
@@ -1817,18 +1817,11 @@ span[name="existingImages"] img {
 	margin-left: 5px;
 }
 
-.ui-widget-content {
-	padding: 0.8em;
-}
-
 .ui-autocomplete {
 	.ui-autocomplete-category {
 		font-weight: bold;
 		line-height: 1.5;
-
-		&:first-child {
-			margin: 0.8em 0 0.2em;
-		}
+		padding: 2px 0.4em;
 	}
 
 	.ui-menu-item {
@@ -1857,12 +1850,6 @@ span[name="existingImages"] img {
 
 .scanerMailActionsButtons {
 	min-width: 96px;
-}
-
-.ui-widget-content {
-	border: 1px solid #aaa;
-	background: #fff;
-	color: #404040;
 }
 
 .ui-menu .ui-menu-item {
@@ -3265,18 +3252,6 @@ select.form-control {
 .openStreetMapModalBody .descriptionContainer {
 	max-height: 150px;
 	overflow: auto;
-}
-
-.openStreetMapModalHeader {
-	.searchValue {
-		border-top-right-radius: 0;
-		border-bottom-right-radius: 0;
-	}
-
-	.radius {
-		border-top-left-radius: 0;
-		border-bottom-left-radius: 0;
-	}
 }
 
 .activityContainer {
