Added icon field in Picklist panel - part 4

--- a/public_html/layouts/basic/styles/Main.css
+++ b/public_html/layouts/basic/styles/Main.css
@@ -25032,6 +25032,20 @@ input[type=radio]:checked:before {
 }
 
 /* {[The file is published on the basis of YetiForce Public License 5.0 that can be found in the following directory: licenses/LicenseEN.txt or yetiforce.com]} */
+.icon-img--picklist {
+  width: 1em;
+  height: 1em;
+  vertical-align: baseline;
+  margin-bottom: -2px;
+}
+
+.icon-img--list {
+  width: 2em;
+  height: 2em;
+  vertical-align: baseline;
+}
+
+/* {[The file is published on the basis of YetiForce Public License 5.0 that can be found in the following directory: licenses/LicenseEN.txt or yetiforce.com]} */
 body {
   overflow: hidden;
 }
@@ -28371,5 +28385,4 @@ td.fieldValue .input-group {
   .c-module-table-row {
     width: calc(100vw - 0.5rem);
   }
-}
-/*# sourceMappingURL=Main.css.map */
+}/*# sourceMappingURL=Main.css.map */
