--- a/public_html/layouts/basic/styles/Main.scss
+++ b/public_html/layouts/basic/styles/Main.scss
@@ -25,6 +25,7 @@
 @import "components/_Checkbox";
 @import "components/_ConditionBuilder";
 @import "components/_Fields";
+@import "components/_Icons";
 //-------- layout --------//
 @import "layout/_Base";
 @import "layout/_Header";
