--- a/public_html/layouts/basic/styles/components/_Utilities.scss
+++ b/public_html/layouts/basic/styles/components/_Utilities.scss
@@ -638,6 +638,12 @@ body:not(.desktop) {
 	}
 }
 
+@include media-breakpoint-down(xl) {
+	.u-overflow-auto-xl-down {
+		overflow: auto !important;
+	}
+}
+
 //--- TABLE ---//
 .u-w-30per {
 	width: 30%;
