Unified the display of graphic files.

--- a/public_html/layouts/basic/styles/components/_Global.scss
+++ b/public_html/layouts/basic/styles/components/_Global.scss
@@ -164,8 +164,9 @@ body:not(.desktop) {
 		height: 2rem;
 		width: 2rem;
 		cursor: pointer;
-		background-size: cover;
+		background-size: contain;
 		background-position: center;
+		background-repeat: no-repeat;
 	}
 	&__popover-img {
 		cursor: pointer;
