--- a/public_html/layouts/basic/styles/components/_Utilities.scss
+++ b/public_html/layouts/basic/styles/components/_Utilities.scss
@@ -371,6 +371,10 @@
 	min-width: 18rem;
 }
 
+.u-min-w-45per {
+	min-width: 45% !important;
+}
+
 .u-min-w-300px {
 	min-width: 300px !important;
 }
