--- a/public_html/layouts/resources/icons/yfm.css
+++ b/public_html/layouts/resources/icons/yfm.css
@@ -1,8 +1,8 @@
 @font-face {
 	font-family: 'yfm';
-	src: url('fonts/yfm.eot?i2hwdd');
-	src: url('fonts/yfm.eot?i2hwdd#iefix') format('embedded-opentype'), url('fonts/yfm.ttf?i2hwdd') format('truetype'),
-		url('fonts/yfm.woff?i2hwdd') format('woff'), url('fonts/yfm.svg?i2hwdd#yfm') format('svg');
+	src: url('fonts/yfm.eot?xb3or2');
+	src: url('fonts/yfm.eot?xb3or2#iefix') format('embedded-opentype'), url('fonts/yfm.ttf?xb3or2') format('truetype'),
+		url('fonts/yfm.woff?xb3or2') format('woff'), url('fonts/yfm.svg?xb3or2#yfm') format('svg');
 	font-weight: normal;
 	font-style: normal;
 	font-display: block;
@@ -26,6 +26,9 @@
 [class^='yfm-']:before,
 [class*=' yfm-']:before {
 	content: '\e972';
+}
+.yfm-SMSTemplates:before {
+	content: '\e984';
 }
 .yfm-Passwords:before {
 	content: '\e983';
