Added grouping of entries in advanced blocks: part 3

--- a/public_html/layouts/basic/skins/gray/pages/_Edit.scss
+++ b/public_html/layouts/basic/skins/gray/pages/_Edit.scss
@@ -41,4 +41,8 @@
 			border-radius: 0;
 		}
 	}
+	.inventoryRowGroup td, .inventoryRowGroup td:hover {
+		background-color: #e3e3e3 !important;
+		color: #000 !important;
+	}
 }
