--- a/public_html/layouts/basic/styles/pages/_Detail.scss
+++ b/public_html/layouts/basic/styles/pages/_Detail.scss
@@ -2,11 +2,13 @@
 $progress-dot-size: calc(100% - #{calculate-rem(6px)});
 
 .o-view-detail {
-	@include media-breakpoint-down(sm) {
-		font-size: 90%;
-		.c-menu__header,
-		.c-header {
-			min-height: 3.5rem !important;
+	.detailViewContainer {
+		@include media-breakpoint-down(sm) {
+			font-size: 90%;
+			.c-menu__header,
+			.c-header {
+				min-height: 3.5rem !important;
+			}
 		}
 	}
 }
