--- a/public_html/layouts/basic/skins/gray/style.css
+++ b/public_html/layouts/basic/skins/gray/style.css
@@ -5200,4 +5200,5 @@ h6,
 
 .recentComments .addCommentBlock {
   border-radius: 0;
-}/*# sourceMappingURL=style.css.map */
+}
+/*# sourceMappingURL=style.css.map */
