Added new progress line

--- a/public_html/layouts/basic/styles/pages/_Detail.scss
+++ b/public_html/layouts/basic/styles/pages/_Detail.scss
@@ -684,6 +684,20 @@ $progress-dot-size: calc(100% - #{calculate-rem(6px)});
 		}
 	}
 
+	&__item--select {
+		&:after,
+		&:before,
+		.c-progress__icon__container {
+			background: $progress-bg--inactive;
+		}
+	}
+
+	&__item--select.active {
+		.c-progress__icon__container {
+			background: $progress-bg--active;
+		}
+	}
+
 	&__link {
 		display: flex;
 		width: 100%;
